Version: 4.2.31
- updated list of supported mods to limit to Alien Modules (1.4.2) mod that I recently modified to 
  support teams.
- After death of a players main roboport - terminating his game, I now remove the items in his inventory.
  This is more meaningful to character players and removes a potential cheat.
---------------------------------------------------------------------------------------------------
Version: 4.2.30
- Removed Restart button for players in spawn location
- Minor Fix: player menu, which was not showing character/brave new player correctly
- Added items for SeaBlock for both character and BNO player
- Added option chooseable by host to modify starting chests from 4 upto 10 total red/blue chests for BNO player
  no change to green/purple chests.  This to help remove starting grind.
- SeaBlock and Krastorio text on ground at spawn if those mods are loaded
- Fixed bug on exit that could occasionally cause a crash when a player left the game
---------------------------------------------------------------------------------------------------
Version: 4.2.29 Feb 12, 2024
- Fixed Buddy Spawn mode - this previous caused a crash
---------------------------------------------------------------------------------------------------
Version: 4.2.28 Feb 5, 2024
- Labelled on ground Sea Block, Krastorio2 when you join with those mods running

Bug fixes 
- One due to someone exiting the game.
- Other bug was the labelling of Character/Brave New Player in player list was wrong
- SeaBlock - addition of 300 wood pellets and 2 assemblers to Brave New Player - otherwise could be deadlock getting to wood stage.
---------------------------------------------------------------------------------------------------
Version: 4.2.27 Jan 29, 2024
- Added support for SeaBlock in both character and BNO modes
---------------------------------------------------------------------------------------------------
Version: 4.2.26 Jan 23, 2024